fix sidebar bottom cutoff by allowing overflow scroll

--- a/src/style.css
+++ b/src/style.css
@@ -599,7 +599,7 @@ md-dialog {
   display: flex;
   flex-direction: column;
   padding: 0;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .sidebar-header {
